tests/baselines/reference/unicodeExtendedEscapesInStrings20_ES5.errors.txt
//// [tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings20_ES5.ts] ////

unicodeExtendedEscapesInStrings20_ES5.ts(1,13): error TS1125: Hexadecimal digit expected.


==== unicodeExtendedEscapesInStrings20_ES5.ts (1 errors) ====
    var x = "\u{";
                
!!! error TS1125: Hexadecimal digit expected.
    